css/style.css
/*** Fonts arearm ***/
  @font-face {
    font-family: "Playfair Display - Bold";
    src: url("../fonts/playfair-bold.eot");
    src: url("../fonts/playfair-bold.eot?#iefix") format("embedded-opentype"),
         url("../fonts/playfair-bold.woff2") format("woff2"),
         url("../fonts/playfair-bold.ttf") format("truetype"),
         url("../fonts/playfair-bold.svg#playfair_bold") format("svg");
    font-weight: bold;
    font-style: normal;
}

@font-face {
    font-family: "Playfair Display - Bold Italic";
    src: url("../fonts/playfair-bolditalic.eot");
    src: url("../fonts/playfair-bolditalic.eot?#iefix") format("embedded-opentype"),
         url("../fonts/playfair-bolditalic.woff2") format("woff2"),
         url("../fonts/playfair-bolditalic.ttf") format("truetype"),
         url("../fonts/playfair-bolditalic.svg#playfair_bold_italic") format("svg");
    font-weight: bold;
    font-style: italic;
}

@font-face {
    font-family: "Playfair Display - Italic";
    src: url("../fonts/playfair-italic.eot");
    src: url("../fonts/playfair-italic.eot?#iefix") format("embedded-opentype"),
         url("../fonts/playfair-italic.woff2") format("woff2"),
         url("../fonts/playfair-italic.ttf") format("truetype"),
         url("../fonts/playfair-italic.svg#playfair_italic") format("svg");
    font-weight: normal;
    font-style: italic;
}

@font-face {
    font-family: "Playfair Display - Regular";
    src: url("../fonts/playfair-regular.eot");
    src: url("../fonts/playfair-regular.eot?#iefix") format("embedded-opentype"),
         url("../fonts/playfair-regular.woff2") format("woff2"),
         url("../fonts/playfair-regular.ttf") format("truetype"),
         url("../fonts/playfair-regular.svg#playfair_regular") format("svg");
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: "Raleway - Regular";
    src: url("../fonts/raleway-light.eot");
    src: url("../fonts/raleway-light.eot?#iefix") format("embedded-opentype"),
         url("../fonts/raleway-light.woff2") format("woff2"),
         url("../fonts/raleway-light.ttf") format("truetype"),
         url("../fonts/raleway-light.svg#ralewaylight") format("svg");
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: "Raleway - Italic";
    src: url("../fonts/raleway-lightitalic.eot");
    src: url("../fonts/raleway-lightitalic.eot?#iefix") format("embedded-opentype"),
         url("../fonts/raleway-lightitalic.woff2") format("woff2"),
         url("../fonts/raleway-lightitalic.ttf") format("truetype"),
         url("../fonts/raleway-lightitalic.svg#ralewaylight_italic") format("svg");
    font-weight: normal;
    font-style: italic;
}

@font-face {
    font-family: "Raleway - Bold";
    src: url("../fonts/raleway-medium.eot");
    src: url("../fonts/raleway-medium.eot?#iefix") format("embedded-opentype"),
         url("../fonts/raleway-medium.woff2") format("woff2"),
         url("../fonts/raleway-medium.ttf") format("truetype"),
         url("../fonts/raleway-medium.svg#ralewaymedium") format("svg");
    font-weight: bold;
    font-style: normal;
}

@font-face {
    font-family: "Raleway - Bold Italic";
    src: url("../fonts/raleway-mediumitalic.eot");
    src: url("../fonts/raleway-mediumitalic.eot?#iefix") format("embedded-opentype"),
         url("../fonts/raleway-mediumitalic.woff2") format("woff2"),
         url("../fonts/raleway-mediumitalic.ttf") format("truetype"),
         url("../fonts/raleway-mediumitalic.svg#ralewaymedium_italic") format("svg");
    font-weight: bold;
    font-style: italic;
}

/* Global */
body {
  font-family: "Raleway - Regular", sans-serif;
  font-weight: normal;
  font-style: normal;
  text-align: center;
  color: #2d2d2d;
  font-size: 14px;
}

h1{
  display:none; /* h1 tag required for every page created */
}

h2 {
  font-family: "Playfair Display - Italic", serif;
  font-size: 2.38rem; /* 38/16 */
  font-weight: normal;
  font-style: italic;
  padding: 3.75rem 0 1.25rem 0; /* 60/16 0 20/16 0 */
}

.bold-heading {
  font-family: "Playfair Display - Bold", serif;
  font-size: 2.38rem; /* 38/16 */
  font-style: normal;
  font-weight: bold;
}

h3 {
  font-family: "Playfair Display - Regular", serif;
  font-size: 1.5rem; /* 24/16 */
  text-align: center;
  color: #e2574c;
}

.hide-tag {
  display: none; /* for sections that required a h2-h6 tag, flagged by the HTML validator */
}

/* General */
a {
  color: #ffffff;
  text-decoration: none;
}

a:hover {
  color: #b64036;
}

.container {
  max-width: 77.5rem; /* 1240/16 */
  padding: 1rem;
  margin: 0 auto;
}

/* Header */
header {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

.logo-wrapper {
  align-self: flex-start;
}

.aloha-logo {
  width: 9.68rem; /* 155/16 */
}

.cart-wrapper {
  align-self: flex-end;
}

.shopping-cart {
  width: 3.75rem; /* 60/16 */
}

/* Banner */
.hero {
  background:
    linear-gradient(to bottom, rgba(0,0,0,0.25) 0%, rgba(0,0,0,0.25) 100% ),
    url("../images/banner-girl.png") no-repeat,
    url("../images/flower-bkgd.jpg");
  background-size: contain, contain, cover;
  background-position: 45%, left 50% bottom -6.78rem, 45%; /* 95/14 */
  height: 39.28rem; /* 550/14 */
  clear: both;
  width: 100%;
  margin: 0 auto;
}

.new-collection {
  position: relative; top: 45%;
  font-family: "Raleway - Bold", sans-serif;
  font-weight: bold;
  font-style: normal;
  font-size: 1.25rem; /* 20/16 */
  padding: 0.62rem; /* 10/16 */
  text-transform: uppercase;
  text-shadow: 0.06rem 0.06rem 0.12rem black; /* 1/16 1/16 2/16 */
  color: #ffffff;
}

.season {
  position: relative; top: 45%;
  font-family: "Playfair Display - Regular", serif;
  font-size: 4rem; /* 64/16 */
  color: #ffffff;
  text-shadow: 0.07rem 0.07rem 0.14rem black; /* 1/16 1/16 2/16 */
}

.description {
  font-size: 1.125rem; /* 18/16 */
  line-height: 2.25rem; /* 36/16 */
  padding: 1rem 0 3rem 0; /* 5/16 0 60/16 0 */
  max-width: 77.5rem; /* 1240/16 */
  /*text-align: center;*/
}

.products {
  margin-bottom: 3.57rem; /* 50/14 */
  width: 100%;
  border-top: 0.14rem solid #d7d7d7;;
}

.products li {
  list-style: none;
  margin: 0 auto;
  width: 100%;
}

.products-category {
  font-family: "Raleway - Bold", sans-serif;
  font-size: 0.625rem; /* 10/16 */
  line-height: 1.3125rem; /* 21/16 */
  color: #969696;
  background-color: #ffffff;
  text-transform: uppercase;
}

.products-price {
  font-family: "Raleway - Bold", sans-serif;
  font-size: 1rem; /* 16/16 */
  line-height: 2rem; /* 32/16 */
  color: #969696;
}

/* Signup for Updates */
.signup {
  background: linear-gradient(to bottom, rgba(0,0,0,0.15) 0%, rgba(0,0,0,0.15) 100%),
   url('../images/wave-bkgd.jpg') no-repeat bottom;
  margin-bottom: 0.71rem; /* 10/14 */
  color: #ffffff;
  width: 100%;
  padding: 1rem;
  /*margin: 0 auto;*/
}

.signup-form {
  border-radius: 25px;
  background-color: #ffffff;
  width: 400px;
  height: 55px;
  bottom: 1rem;
  position: relative;
  margin: 0 auto;
}

input[type="email"] {
  border-radius: 25px;
  font-size: 1rem; /* 14/14 */
  width: 51%;
  padding: 1rem; /* 14/14 */
  /*margin: 0.71rem; /* 10/14 */
  color: #969696;
  /*margin: 0 auto;*/
  right: 5rem;
  border: 0;
  position: relative;
  bottom: 0rem; /* 45/14 */
  line-height: 1.5;
}

input[type="submit"] {
  border-radius: 1.42rem; /* 20/14 */
  font-size: 1.14rem; /* 16/14 */
  width: 8.64rem; /* 121/14 */
  padding: 0.71rem; /* 10/14 */
  background-color: #e2574c;
  text-align: center;
  color: #ffffff;
  position: absolute;
  /*bottom: 3.21rem; /* 45/14 */
  /*left: -9.07rem; /* 127/14 */
  border: 0;
  left: 16.1rem;
  bottom: 0.35rem;
}

input:focus {
    outline:none;
}

/* Footer */
footer {
  text-align: center;
  font-family: "Playfair Display - Regular", serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem; /* 14/14 */
  /*line-height:  /* 21/14 */
  padding: 2.85rem; /* 40/14 */
  background-color: #242424;
  color: #ffffff;
  width: 100%;
}

.contact-info {
  padding: 1.07rem 0 1.07rem 0; /* top (15/14)| right | bottom (15/14) | left */
}

.address {
  color: #928479;
  padding: 0.71rem 0 0.71rem 0; /* 10/14 0 10/14 0 */
}

.social-media {
  display: flex;
  justify-content: center;
}

.fa {
  padding: 0.5rem;
}

.hide-text {
  display:none;
}
/*
/* Breakpoints */
/*@media screen and (min-width: 600px) {
  body{
    font-size: 16px;
  }

  .new-collection {
    /*font-size: /* 20/16 */
  }

  /*.products li {
    display: inline-block;
    float: left;
    background-color: white;
  }

  footer {
    display: flex;
    justify-content: space-between;
  }

  .footer-left {
    text-align: left;
  }

  .social-media {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
  }*/

  /*.social-media {
    min-width: 2.5rem;
  }*/

  /*.social-media li {
    display: flex;*/
    /*justify-content: flex-start; /* aligns the social media icons to the left*/*/
    /*padding: 0;
  }

  .hide-text {
    display: inline;
  }
}*/

/*@media screen and (min-width: 1240px) {
  body {
    font-size: 16px;
  }
}
*/

